--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "seed": "node src/server/seeder/seeder.js"
   },
   "keywords": [
     "ipl"
